@@ -169,6 +169,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10655) Show standard tool links for blocked users in block log messages
 * Show standard tool links for blocked users in Special:Ipblocklist
 * Miscellaneous aesthetic improvements to Special:Ipblocklist
+* (bug 10826) Added linktrail with cyrillic characters for Mongolian language
 
 == Bugfixes since 1.10 ==
 
